[gd_scene load_steps=21 format=2]

[ext_resource path="res://Entities/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/Entities/Enemies/Chili.png" type="Texture" id=4]
[ext_resource path="res://Entities/Enemies/Chili/Chili.gd" type="Script" id=5]
[ext_resource path="res://Entities/Pathfinding.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Graphics/Shadows/SmallShadow.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Story System/StoryTrigger.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 135.059

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 14.0

[sub_resource type="CircleShape2D" id=3]
radius = 15.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 4.36158

[node name="Chili" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 5 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -9 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 10 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Pathfinding" parent="." instance=ExtResource( 6 )]

[node name="ChaseTimer" type="Timer" parent="."]

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 3

[node name="AttackCooldown" type="Timer" parent="."]

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 8 )

[node name="StoryTrigger" parent="." instance=ExtResource( 9 )]
condition = 2

[connection signal="player_detected" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_player_detected"]
[connection signal="player_lost" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_player_lost"]
[connection signal="hurtbox_got_hit" from="Hurtbox" to="." method="_on_Hurtbox_hurtbox_got_hit"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="Pathfinding"]
